fix invisible borders in the schedule using firefox

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -73,6 +73,7 @@ tr:nth-child(even){
   
 td.sch{
     border-right: solid thin;
+    background-clip: padding-box; /* Fix the invisible borders in Firefox. */
     text-align: center;
 }
   
